css/pages/services/services.css
.services-page .services {
    padding-top: var(--space-8);
}

.services-page .services__intro {
    border-bottom: solid 1px var(--color-border-accent-grey);
    padding-inline: var(--space-4);
    padding-bottom: var(--space-10);
}

.services-page .services__title {
    font-size: var(--font-size-title-md);
    font-weight: var(--font-weight-title);
    line-height: var(--line-height-heading);
    margin-bottom: var(--space-2);
}

.services-page .services__intro-list {
    color: var(--color-text-accent-white);
    margin-top: var(--space-10);
}

.services-page .services__intro-list-mark {
    display: block;
    width: max-content;
    background-color: var(--color-background-accent-grey-2);
    border-radius: var(--radius-md);
    padding-block: var(--space-2);
    padding-inline: var(--space-3);
}

.services-page .services__item {
    border-bottom: solid 1px var(--color-border-accent-grey);
}

.services-page .services__item:last-child {
    border: none;
}

.services-page .services__subtitle {
    color: var(--color-grey-200);
    text-align: center;
    font-size: var(--font-size-title-sm);
    font-weight: var(--font-weight-medium);
    line-height: var(--line-height-heading);
    border-bottom: solid 1px var(--color-border-accent-grey);
    padding-inline: var(--space-4);
    padding-block: var(--space-10);
}

.services-page .services__list-feat-service {
    display: flex;
    flex-wrap: wrap;
}

.services-page .services__item-feat-service {
    display: flex;
    flex-direction: column;
    gap: var(--space-4);
    flex: 1 1 45%;
    border-bottom: solid 1px var(--color-border-accent-grey);
    padding: var(--space-4);
}

.services-page .services__item-feat-service:nth-child(2) {
    border-left: solid 1px var(--color-border-accent-grey);
}

.services-page .services__item-feat-service:nth-child(3) {
    border: none;
}

.services-page .services__item-feat-service:last-child {
    border-left: solid 1px var(--color-border-accent-grey);
    border-bottom: none;
}

@media (min-width: 768px) {
    .services-page .services__intro {
        padding-inline: var(--space-6);
    }

    .services-page .services__subtitle {
        text-align: left;
        padding-inline: var(--space-6);
    }

    .services-page .services__item-feat-service {
        padding: var(--space-6);
    }
}

@media (min-width: 1024px) {
    .services-page .services {
        padding-top: var(--space-12);
    }

    .services-page .services__intro {
        padding-inline: var(--space-8);
    }

    .services-page .services__subtitle {
        padding-inline: var(--space-8);
    }

    .services-page .services__list-feat-service {
        flex-wrap: nowrap;
    }

    .services-page .services__item-feat-service {
        border-bottom: none;
        padding: var(--space-8);
    }

    .services-page .services__item-feat-service:nth-child(3) {
        border-left: solid 1px var(--color-border-accent-grey);
    }
}

